# flask-stripe-one-time-payments

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  compose.yaml  config.py  pyproject.toml  requirements.txt  run.py  settings.py
.github/workflows/: ci.yml
app/: __init__.py  models.py  routes.py  settings.py
app/routes/: __init__.py  api.py  api_routes.py  frontend.py  main_routes.py  stripe.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: add_product.html  add_products.html  base.html  cancelled.html  index.html  list_products.html
app/utils/: database.py
static/: main.js
templates/: base.html  success.html
tests/: conftest.py
tests/unit/: test_api.py  test_stripe.py
